force-app/main/default/objects/tdc_cti__CTI_General_Setting__c/fields/tdc_cti__Default_mute__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Default_mute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default mute</label>
    <type>Checkbox</type>
</CustomField>