force-app/main/default/objects/tdc_cti__CTI_General_Setting__c/fields/tdc_cti__Enable_call_conference__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Enable_call_conference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable call conference</label>
    <type>Checkbox</type>
</CustomField>