force-app/main/default/objects/tdc_cti__CTI_General_Setting__c/fields/tdc_cti__Options__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Options__c</fullName>
    <label>Options</label>
    <type>TextArea</type>
</CustomField>