force-app/main/default/objects/tdc_cti__CTI_General_Setting__c/fields/tdc_cti__Voice_type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Voice_type__c</fullName>
    <label>Voice type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>